--- a/ContosoUniversity/appsettings.json
+++ b/ContosoUniversity/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SchoolContext": "Server=(localdb)\\mssqllocaldb;Database=SchoolContext;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SchoolContext": "Server=titan.cs.weber.edu,10433;Initial Catalog=DicksonCurry;Persist Security Info=False;User ID=4790;Password=4790$tudent;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;"
   }
 }
